<resources>
    <string name="app_name">DigioWallet</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">HOME</string>
    <string name="history">HISTORY</string>

    <string name="qr_code">QR Code</string>
    <string name="profile">PROFILE</string>
    <string name="setting">APP SETTING</string>
    <string name="source">SOURCE OF FUND</string>
    <string name="privacy">PRIVACY</string>
    <string name="about">ABOUT</string>
    <string name="logout">LOGOUT</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="you_want_to_transfer_to">You want to transfer to..</string>
    <string name="bank_account">Bank Account</string>
    <string name="digio_wallet">Digio Wallet</string>
    <string name="citizen_id">Citizen ID</string>
    <string name="select_bank">Select bank</string>

    <string name="kbank">Kasikorn Bank</string>
    <string name="ktb">Krung Thai Bank</string>
    <string name="scb">Siam Commercial Bank</string>
    <string name="krungsri">Krungsri Bank</string>
    <string name="tbank">Thanachart Bank</string>
    <string name="bbl">Bangkok Bank</string>
    <string name="digio">Digio Bank</string>

    <string name="to_account_no">To Account No</string>
    <string name="amount">Amount</string>
    <string name="next">Next</string>
    <string name="note">Note</string>
    <string name="action_new">New Note</string>
    <string name="account_no">Account No</string>

</resources>
