<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />

        <item
            android:id="@+id/source_of_fund"
            android:icon="@drawable/ic_sof"
            android:title="@string/source" />

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/privacy"
                android:icon="@drawable/ic_privacy"
                android:title="@string/privacy" />

            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
        </group>

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </group>

    </group>
</menu>
